# raytracer-in-rust

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  dielectric.rs  hit_record.rs  hittable.rs  hittable_list.rs  lambertian.rs  main.rs  material.rs  metal.rs  ray.rs  rng.rs  sphere.rs  utils.rs  vec3.rs
