[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coz = "0.1.3"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.5.3"

[profile.release]
opt-level = 3
lto = true
debug = true
incremental = false

